--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="BEP Cattle Feed Platform - Buy and Sell Cattle Feed"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>BEP - Cattle Feed Platform</title>
+
+    <!-- 
+      *** ADDED YOUR AI ASSISTANT SCRIPT HERE ***
+    -->
+    <script src='https://cdn.jotfor.ms/agent/embedjs/019a3ec003e37dba9d681e714ede0af1c623/embed.js'>
+    </script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
